recursion.cons.lessons.recursion.cons.Increasing.scala.error
increasing:-6: error: Missing closing brace `}' assumed here
try {
^increasing:1: error: expected class or object definition
def increasing(l:List[Int]): Boolean = {
^